Makeinterface.py handles String[]